@@ -1,3 +1,7 @@
+2005-09-13 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b6
+
+	* Fix: Make comment emails HTML-mails, so links work correctly.
+
 2005-09-12 Dariush Molavi <dari@nukedgallery.net> 1.5.1-RC4-cvs-b5
 
 	* Change: New address for Free Software Foundation in GPL header.
